<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo2" >
            
        </ImageView>
            <!-- android:src="@drawable/logo" /> -->
        
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">
        
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>
        
        <TextView
            android:id="@+id/intro_message"
            style="@style/TextStyleAppThme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/introductionTextView"
            android:textAppearance="@style/TextStyleAppThme"
            android:textColor="@color/apptheme_text_color"
            android:textSize="20sp" />
        
        <Space
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"/>
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15" >
        
        <Button
            android:id="@+id/start_btn"
            style="@style/ButtonAppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:onClick="startApp"
            android:text="@string/button_start"
            android:textColor="@color/apptheme_text_color"
            android:textSize="26sp" />
        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">
        
        <Button
            android:id="@+id/goOut_btn"
            style="@style/ButtonAppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/apptheme_btn_default_holo_light"
            android:onClick="destroyApp"
            android:text="@string/button_goOut"
            android:textColor="@color/apptheme_text_color"
            android:textSize="26sp" />
        
    </RelativeLayout>
</LinearLayout>
